# with-agent-spec

./: README.md  package.json
agent/src/: a2ui_agentspec_agent.py
src/app/: globals.css  layout.tsx  page.tsx  style.css  theme.ts
src/components/: a2ui-activity-wrapper.tsx  calendar-view.tsx  cta-banner.tsx  email-compose-view.tsx  explainer-section.tsx  inbox-view.tsx
with-agent-spec-a2ui/: README.md  eslint.config.js  package.json  tailwind.config.ts  tsconfig.json
with-agent-spec-a2ui/agent/: pyproject.toml
with-agent-spec-a2ui/agent/src/: a2ui_from_llm.py  agent.py  main.py  restaurant_tool.py
with-agent-spec-a2ui/app/: a2ui-theme.css  layout.tsx  page.tsx
with-agent-spec-a2ui/app/api/copilotkit/: static-agent.ts
with-agent-spec-a2ui/app/api/copilotkit/[[...slug]]/: route.tsx
with-agent-spec-a2ui/app/components/: PatchedCopilotChatMessageView.tsx
with-agent-spec-a2ui/scripts/: run-agent.sh  setup-agent.sh
