[project]
name = "agent"
version = "0.1.0"
description = "Agent Spec A2UI LLM agent"
requires-python = ">=3.10"
dependencies = [
    "uvicorn",
    "python-dotenv",
    "ag-ui-agent-spec[langgraph, wayflow]",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]
ag-ui-agent-spec = { path = "../../ag-ui/integrations/agent-spec/python", editable = true }

